# picorouter

./: .gitignore  AGENTS.md  ANALYSIS_v0.0.3.md  CHANGELOG.md  DEVELOP.md  Dockerfile  FEATURES.md  INSTALL.md  LATER.md  Makefile  README.md  RELEASE.md  RELEASE_SUMMARY_v0.0.3.md  SECURITY.md  SETUP.md  config.example.yaml  coverage.sh  docker-compose.yml  install.sh  mcpsearch.py  picorouter.py  picorouter.spec  picosearch.py  pyproject.toml  requirements.txt  setup.sh  skill.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: _config.yml  api.md  cli.md  config.html  docker.md  features.html  index.html  privacy-routing.md  production-nginx.conf  sdk.md  setup.html  tui.md  web.md
logs/: picorouter.db  requests.jsonl
picorouter/: __init__.py  __main__.py  api.py  config.py  health.py  keys.py  logger.py  models.py  providers.py  router.py  secrets.py  storage.py  tailscale.py  web_settings.py
picorouter/providers/: __init__.py
sdk/: picorouter.py
sdk/picorouter/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_integration.py  test_main.py  test_models.py  test_picorouter.py  test_privacy_routing.py  test_routing.py  test_secrets.py  test_storage.py  test_tailscale.py
tui/: picorouter_tui.py
web/: app.py
