[project]
name = "picorouter"
version = "0.1.0"
description = "Your personal OpenRouter - lean, local-first AI model router"
authors = [{name = "CashlessConsumer"}]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "flask>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
tui = [
    "textual>=0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
