[project]
name = "picorouter"
version = "0.0.2"
description = "Your personal OpenRouter - lean, local-first AI model router"
authors = [{name = "CashlessConsumer", email = "hello@cashlessconsumer.org"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
]
test = ["pytest", "pytest-cov", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
picorouter = "picorouter.__main__:main"
